objects/OrderManagerIntegrationProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>EndpointGet__c</fullName>
        <label>Endpoint Get</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointLoginUrl__c</fullName>
        <label>Endpoint Login Url</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Order Manager Integration Properties</label>
</CustomObject>